| Summary: | ASTERISK-22637: ARI channel mute causes core | ||
| Reporter: | Scott Griepentrog (sgriepentrog) | Labels: | |
| Date Opened: | 2013-10-02 14:28:22 | Date Closed: | 2013-10-03 14:07:06 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt | |
| Description: | Sent ari POST http://localhost:8088/ari/channels/1380741722.7/mute and received core. | ||
| Comments: | By: Scott Griepentrog (sgriepentrog) 2013-10-02 14:30:16.958-0500 Proper backtrace this time. By: Matt Jordan (mjordan) 2013-10-02 16:22:43.285-0500 Apparently not specifying a direction will cause it to explode... By: Matt Jordan (mjordan) 2013-10-02 16:23:22.935-0500 This will happen on unmute as well. | ||