Fix a crash caused by muting and unmuting a channel in ARI without specifying a direction.

(closes issue ASTERISK-22637)
Reported by: Scott Griepentrog

Patch by Matt Jordan, whose office I have taken over in the name of Canada.


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@400401 65c4cc65-6c06-0410-ace0-fbb531ad65f3